# Plugin-Netbox

./: .gitignore  README.md  pyproject.toml
deploy/k3s/: README.md  SYNC.md  netbox.yaml  sync-cronjob-remote.yaml  sync-cronjob.yaml
docs/: INSTALL.md
netbox_k3s/: __init__.py  admin.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_k3s/api/: serializers.py  urls.py  views.py
netbox_k3s/migrations/: 0001_initial.py  0002_detail_fields.py
netbox_k3s/templates/netbox_k3s/: k3scluster.html  k3snamespace.html  k3spod.html  k3sservice.html
netbox_k3s/tests/: test_plugin.py
scripts/: README.md  netbox-k3s-sync.service  netbox-k3s-sync.timer  sync_k3s.py  test_sync.py
test/: README.md  docker-compose.yml  fake-kubectl  make_token.py  plugins.py  seed.py  start.sh  verify.py  verify_detail.py  verify_dup.py
