[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-k3s"
version = "0.1.0"
description = "NetBox plugin adding a dedicated Kubernetes (k3s) section: clusters, namespaces, pods and services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = []

# [project.urls]
# Homepage = "https://github.com/<votre-compte>/<votre-depot>"

[tool.setuptools.packages.find]
include = ["netbox_k3s*"]

[tool.setuptools.package-data]
netbox_k3s = ["templates/**/*.html"]
